feat: meaning of this in arrow-fn

--- a/snippets/functions/index.html
+++ b/snippets/functions/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <button class="button">Click</button>
-    <script src="this.js"></script>
+    <script src="this-in-arrow-fn.js"></script>
   </body>
 </html>
