--- a/snippets/string/index.html
+++ b/snippets/string/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrapper"></div>
-    <!-- <script src="template.js"></script> -->
-    <script src="styled-components.js"></script>
+    <!-- <script src="template-literal.js"></script> -->
+    <script src="my-styled-components.js"></script>
   </body>
 </html>
